# Muilti-Object_Trowing

./: .gitignore  MUJOCO_LOG.TXT  README.md  Working Notes.md  requirements.txt  run.sh
src/: CMakeLists.txt  CMakeLists.txt.old  __init__.py  package.xml  setup.py
src/NN_model/: model.pth  model_epoch_10000.pth  model_epoch_20000.pth
src/brt_data/: brt_data.npy  brt_tensor.npy  brt_zs.npy
src/config/: config.yaml  test_samples.yaml  test_samples_random.yaml
src/description/: grasping_multiple_pen.xml  iiwa7_allegro_throwing.xml  iiwa7_allegro_ycb.xml  iiwa7_lasa_allegro_left.xml  iiwa7_lasa_allegro_new_prm.xml  moving_ball.xml  point_cloud3.xml  real_env.xml  real_env2.xml
src/fix_hedgehog/: brt_tensor.npy  q_idx_ae.npy  q_idx_qs.npy  robot_diss.npy  z_dis_phi_gamma_vel_max.npy  z_dis_phi_gamma_vel_max_q_idxs.npy
src/hedgehog_data/: argmax_q.npy  q_idx.npy  q_idx_ae.npy  q_idx_ae_posture1.npy  q_idx_ae_posture2.npy  q_idx_qs.npy  q_idx_qs_posture1.npy  q_idx_qs_posture2.npy  q_idxs_posture1.npy  q_idxs_posture2.npy  robot_diss.npy  robot_gammas.npy  robot_phis.npy  z_dis_phi_gamma_vel_max.npy  z_dis_phi_gamma_vel_max_q_idxs.npy
src/hedgehog_revised/: argmax_q.npy  q_idx.npy  q_idx_ae.npy  q_idx_ae_posture1.npy  q_idx_ae_posture2.npy  q_idx_qs.npy  q_idx_qs_posture1.npy  q_idx_qs_posture2.npy  q_idxs_posture1.npy  q_idxs_posture2.npy  robot_gammas.npy  robot_phis.npy  robot_zs.npy  z_dis_phi_gamma_vel_max.npy  z_dis_phi_gamma_vel_max_q_idxs.npy
src/kinematics/: allegro_hand_sym.py  iiwa_kdl.py  q2pose_left.txt
src/launch/: allegro_iiwa_driver.launch  throwing_sim.launch
src/logs/: evaluations.npz
src/metrics/: evaluation.py  evaluation_hedgehog.py  kinematic_analysis.py  visualization.py
src/multi_object_throwing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scripts/: BRT_sample.py  MUJOCO_LOG.TXT  Multi-throwing-search.py  NN_model_search.py  NN_search.py  RL_model.py  RL_search.py  RL_throwing.py  Single_throwing.py  evaluation.py  hedgehog.py  (+9 more)
(+537 files in other folders)
