<?xml version="1.0"?>
<package format="3">
  <name>multi_object_throwing</name>
  <version>0.1.0</version>
  <description>Multi-object throwing system</description>
  <maintainer email="Zhu_Zhengming@outlook.com">Zhu Zhengming</maintainer>
  <license>MIT</license>

  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
